--- a/frontend/src/component/pdf/style.css
+++ b/frontend/src/component/pdf/style.css
@@ -290,3 +290,19 @@ body {
 .downloadButton:hover {
   opacity: 0.8;
 }
+
+
+.updateButton {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 3px;
+  cursor: pointer;
+  margin-left: 5px;
+}
+
+.deleteButton:hover,
+.updateButton:hover {
+  opacity: 0.8;
+}
